--- a/src/Chirp.Razor/Pages/Shared/_Layout.cshtml
+++ b/src/Chirp.Razor/Pages/Shared/_Layout.cshtml
@@ -6,8 +6,13 @@
     <link rel="icon" type="image/png" href="/favicon/favicon.ico">
 </head>
 <body>
-<div class=page>
-    <h1><img src="/images/icon1.png" alt="Icon1"/>Chirp!</h1>
+        <box onclick = "window.location = '/'" class = "bird">
+                <img src="/images/icon1.png" class = "Icon" alt="Icon1"/>
+        </box>
+        <h1 class = "centerbox">
+        Chirp
+     </h1>
+     <div class=page>
 
     <div class=body>
             @RenderBody()
