--- a/src/Chirp.Razor/wwwroot/css/style.css
+++ b/src/Chirp.Razor/wwwroot/css/style.css
@@ -41,11 +41,12 @@ input[type="submit"] {
 }
 
 div.page {
-  float:right;
+  float:center;
   background: WHITE;
   border: 1px solid #cc6e6e;
   width: auto;
   width: 80%;
+  max-width: 700px;
   margin: 30px auto;
 }
 
@@ -137,6 +138,9 @@ div.page div.followstatus {
 }
 
 div.page ul.cheeps {
+  display: flex;
+  flex-direction: column;
+  align-items:center;
   list-style: none;
   margin: 0;
   padding: 0;
@@ -153,8 +157,9 @@ div.page ul.cheeps li{
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
   min-height: 60px;
+  width: auto;
   width: 95%;
-  max-width: 500px;
+  max-width: 700px;
   word-wrap: break-word;
   word-break: break-all;
   display: flex;
@@ -166,7 +171,6 @@ div.page ul.cheeps p {
 }
 
 div.page ul.cheeps li img {
-  float: left;
   padding: 0 10px 0 0;
 }
 
