Public timeline button setup in html: {last page, top, next page} & 32 cheeps is shown (public timeline only)

--- a/src/Chirp.Razor/Pages/Public.cshtml
+++ b/src/Chirp.Razor/Pages/Public.cshtml
@@ -24,9 +24,12 @@
                         <span class="date">&mdash; @cheep.Timestamp</span>
                     </div>
                 </li>
-                
-                
             }
+        <div class = "PageNavigationButton">
+        <button class = "left" id = "button"> -- Last page </button>
+        <button class = "center" id = "button"> Top </button>
+        <button class = "right" id = "button"> Next page --> </button>
+        </div>
         </ul>
     }
     else
