--- a/src/Chirp.Razor/wwwroot/css/style.css
+++ b/src/Chirp.Razor/wwwroot/css/style.css
@@ -349,7 +349,8 @@ ul.nav li a:hover {
 }
 
 .PageNavigationButton{
-  width: 100%;
+  width: 97%;
+  min-width: 362px;
   display: flex;
   flex-flow: row no-wrap;
   align-items: center;
