Functions from Public timeline added to User timeline (Buttons &  messagestructure + html layout for both)

--- a/src/Chirp.Razor/Pages/UserTimeline.cshtml
+++ b/src/Chirp.Razor/Pages/UserTimeline.cshtml
@@ -15,15 +15,22 @@
             @foreach (var cheep in Model.Cheeps)
             {
                 <li>
-                    <p>
-                        <strong>
+                   <div class="cheep-content">
+                        <strong class="author">
                             <a href="/@cheep.Author">@cheep.Author</a>
                         </strong>
-                        @cheep.Message
-                        <small>&mdash; @cheep.Timestamp</small>
-                    </p>
+                        <p class="message">
+                            @cheep.Message
+                        </p>
+                        <span class="date">&mdash; @cheep.Timestamp</span>
+                    </div>
                 </li>
             }
+        <div class = "PageNavigationButton">
+        <button class = "left" id = "button"> -- Last page </button>
+        <button class = "center" id = "button"> Top </button>
+        <button class = "right" id = "button"> Next page --> </button>
+        </div>
         </ul>
     }
     else
