--- a/src/Chirp.Razor/Pages/UserTimeline.cshtml
+++ b/src/Chirp.Razor/Pages/UserTimeline.cshtml
@@ -27,7 +27,7 @@
         </ul>
 
         <ul id="pagelist" class="cheeps">
-            @for(int i = 0; i < 5; i++)
+            @for(int i = 0; i < Model.count / 32; i++)
             {
                 <li>
                     <p>
