Added documentation for all elements in css & words now breaks in words instead of letters

--- a/src/Chirp.Razor/Pages/Shared/_Layout.cshtml
+++ b/src/Chirp.Razor/Pages/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
     <box onclick = "window.location = '/'" class = "bird">
         <img src="/images/icon1.png" class = "Icon" alt="Icon1"/>
     </box>
-    <h1 class = "centerbox">
+    <h1 class = "header">
         Chirp
     </h1>
     </div>
