--- a/src/Chirp.Razor/wwwroot/css/style.css
+++ b/src/Chirp.Razor/wwwroot/css/style.css
@@ -50,6 +50,7 @@ div.page {
   margin: 30px auto;
 }
 
+/*might not be use*/
 div.page > h1 {
   position: relative;
   background: #dc722be2;
@@ -64,11 +65,12 @@ div.page > h1 {
 
 }
 
-
+/*might not be use*/
 div.page h1 img {
   height: 1em;
 }
 
+/*might not be use*/
 div.page div.navigation {
   background: #DEE9E8;
   padding: 4px 10px;
@@ -79,15 +81,17 @@ div.page div.navigation {
   letter-spacing: 0.5px;
 }
 
+/*might not be use*/
 div.page div.navigation a {
   color: #444;
   font-weight: bold;
 }
-
+/*might not be use*/
 div.page div.navigation form {
     display: contents;
 }
 
+/*might not be use*/
 div.page div.navigation form button {
     padding: unset;
     background: unset;
@@ -101,6 +105,7 @@ div.page div.navigation form button {
     letter-spacing: unset;
 }
 
+/*IS USED FOR THE TITELS - "PUBLIC TIMELINE" ">@USER TIMELINE"*/
 div.page h2 {
   display: flex;
   justify-content: center;
@@ -116,10 +121,12 @@ div.page h2 {
 
 }
 
+/*IS USED FOR PADDING WITHIN THE TIMELINE*/
 div.page div.body {
   padding: 10px;
 }
 
+/*IS USED FOR FOOTER*/
 div.page div.footer {
   background: #eee;
   color: #888;
@@ -127,6 +134,7 @@ div.page div.footer {
   font-size: 12px;
 }
 
+/*might not be used*/
 div.page div.followstatus {
   border: 1px solid #ccc;
   background: #E3EBEA;
@@ -137,6 +145,7 @@ div.page div.followstatus {
   font-size: 13px;
 }
 
+/*USED FOR MAKING CHEEPS FIT "NICELY" IN TIMELINE*/
 div.page ul.cheeps {
   display: flex;
   flex-direction: column;
@@ -146,6 +155,7 @@ div.page ul.cheeps {
   padding: 0;
 }
 
+/*USED MOSTLY FOR COLOR AND STYLE WITHIN A CHEEP - (breaks words as well)*/
 div.page ul.cheeps li{
   position: relative;
   margin: 10px 0;
@@ -161,19 +171,22 @@ div.page ul.cheeps li{
   width: 95%;
   max-width: 700px;
   word-wrap: break-word;
-  word-break: break-all;
+  overflow-wrap: break-word;
   display: flex;
   flex-direction: column;
 }
 
+/*DEFINES MARGINS OF THE DIFFERENT TEXTS WITHIN CHEEP - (between author and message mainly)*/
 div.page ul.cheeps p {
   margin: 0;
 }
 
+/*might not be used*/
 div.page ul.cheeps li img {
   padding: 0 10px 0 0;
 }
 
+/*might not be used*/
 div.page div.cheepbox {
   margin: 10px 0;
   padding: 5px;
@@ -184,25 +197,30 @@ div.page div.cheepbox {
   -webkit-border-radius: 5px;
 }
 
+/*might not be used*/
 div.page div.cheepbox h3 {
   margin: 0;
   font-size: 1em;
   color: #7e2c2c;
 }
 
+/*might not be used*/
 div.page div.cheepbox p {
   margin: 0;
 }
 
+/*might not be used*/
 div.page div.cheepbox input[type="text"] {
   width: 485px;
 }
 
+/*might not be used*/
 div.page div.cheepbox input[type="submit"] {
   width: 70px;
   margin-left: 5px;
 }
 
+/*might not be used*/
 div.message {
   list-style: none;
   margin: 10px 10px 0 10px;
@@ -216,6 +234,7 @@ div.message {
   font-size: 13px;
 }
 
+/*might not be used*/
 ul.message li {
   background: #f3b9b9;
   border: 1px solid #ce8181;
@@ -226,6 +245,7 @@ ul.message li {
   font-size: 13px;
 }
 
+/*might not be used*/
 div.error {
   margin: 10px 0;
   background: #FAE4E4;
@@ -237,6 +257,7 @@ div.error {
   font-size: 13px;
 }
 
+/*might not be used*/
 div.topics {
   width: 180px;
   height: 250px;
@@ -251,12 +272,14 @@ div.topics {
   padding: 10px;
 }
 
+/*might not be used*/
 ul.topic {
   list-style: none;
   margin: 0;
   padding: 0;
 }
 
+/*might not be used*/
 li.topic {
   margin: 10px 0;
   padding: 5px;
@@ -268,24 +291,26 @@ li.topic {
   min-height: 20px;
 }
 
+/*might not be used*/
 form * {
     margin: 2px 0;
 }
 
+/*IS USED FOR THE SIZES OF THE BUTTONS AND MORE*/
 button {
-    background-color: #cc6e6e;
     border: none;
-    color: white;
     padding: 8px 16px;
     text-align: center;
     text-decoration: none;
     cursor: pointer;
 }
 
+/*might not be used*/
 button:hover {
     background-color: #8b4949;
 }
 
+/*might not be used*/
 ul.nav {
     list-style-type: none;
     margin: 0;
@@ -294,10 +319,12 @@ ul.nav {
     background-color: #cc6e6e;
 }
 
+/*might not be used*/
 ul.nav li {
     float: left;
 }
 
+/*might not be used*/
 ul.nav li a {
     display: block;
     color: white;
@@ -306,16 +333,19 @@ ul.nav li a {
     text-decoration: none;
 }
 
+/*might not be used*/
 ul.nav li a:hover {
     background-color: #8b4949;
 }
 
+/*USED FOR THE BIRDS SIZE*/
 .Icon{
   cursor: pointer;
   width: 45px;
   height: 40px;
 }
 
+/*USED FOR THE BIRDS LOCATION*/
 .bird{
   position: absolute;
   top: 4.5%;
@@ -323,7 +353,8 @@ ul.nav li a:hover {
   transform: translate(-50%, -50%);
 }
 
-.centerbox{
+/*STYLING AND POSITION FOR THE "CHIRP" HEADER*/
+.header{
   /*Position for the header*/
   display: flex;
   justify-content: center;
@@ -348,6 +379,7 @@ ul.nav li a:hover {
   margin: 0;
 }
 
+/*USED FOR THE BUTTONS SIZE AND POSITION*/
 .PageNavigationButton{
   width: 97%;
   min-width: 362px;
@@ -358,6 +390,7 @@ ul.nav li a:hover {
   padding: 10px 10px 10px 10px;
 }
 
+/*USED FOR THE BUTTONS STYLE*/
 #button{
   background:
   linear-gradient(to top, #797777 -30%, hsla(24, 97%, 40%, 0.886));
@@ -367,38 +400,46 @@ ul.nav li a:hover {
   color: #D4D4D4;
 }
 
+/*FOR BUTTON LEFT*/
 .left{
   float: left;
   width: 110px;
 }
+/*FOR BUTTON RIGHT*/
 .right{
   justify-self: right;
   width: 110px;
 }
 
+/*FOR BUTTON CENTER*/
 .center{
   justify-self: center;
   width: 110px;
 }
 
+/*MAKES THE STRUCTURE WITHIN THE CHEEPS INTO COLUMN*/
 div.page ul.cheeps li .cheep-content {
   display: flex;
   flex-direction: column;
   height: 100%;
 }
 
+/*GIVES A SMALL MARGIN BETWEEN MESSAGE AND AUTHOR*/
 div.page ul.cheeps li .author {
   font-weight: bold;
   margin-bottom: 1px;
 }
 
+/*might not be used "anymore"*/
 div.page ul.cheeps li .message {
   flex-grow: 1;
 }
 
+/*LOCATION AND STYLING FOR THE DATE*/
 div.page ul.cheeps li .date {
   align-self: flex-end;
   font-size: 0.9em;
   color: #ece8e8;
+  /*makes sure message doesn't go over it*/
   margin-top: 11px;
 }
