--- a/src/Chirp.Razor/Pages/Public.cshtml
+++ b/src/Chirp.Razor/Pages/Public.cshtml
@@ -24,8 +24,19 @@
                         <span class="date">&mdash; @cheep.Timestamp</span>
                     </div>
                 </li>
-                
-                
+            }
+        </ul>
+
+         <ul id="pagelist" class="cheeps">
+            @for(int i = 0; i < Model.count / 32; i++)
+            {
+                <li>
+                    <p>
+                        <strong>
+                            <a href="/?page=@i">@i</a>
+                        </strong>
+                    </p>
+                </li>
             }
         </ul>
     }
