--- a/src/Chirp.Razor/Pages/UserTimeline.cshtml
+++ b/src/Chirp.Razor/Pages/UserTimeline.cshtml
@@ -26,8 +26,8 @@
             }
         </ul>
 
-        <ul id="pagelist" class="cheeps">
-            @for(int i = 0; i < Model.count / 32; i++)
+        <ul id="pagelist">
+            @for(int i = 0; i <= Model.count / 32; i++)
             {
                 <li>
                     <p>
