Improved button layout and added arrow.png to navigate pages

--- a/src/Chirp.Razor/Pages/Public.cshtml
+++ b/src/Chirp.Razor/Pages/Public.cshtml
@@ -26,9 +26,17 @@
                 </li>
             }
         <div class = "PageNavigationButton">
-        <button class = "left" id = "button"> -- Last page </button>
+        <button class = "left" id = "button"> 
+              <img src="/images/arrow.png" class = "arrowRight"/>
+             Previous 
+             </button>
+        
         <button class = "center" id = "button"> Top </button>
-        <button class = "right" id = "button"> Next page --> </button>
+        
+        <button class = "right" id = "button">
+            <span>Next</span>
+             <img src="/images/arrow.png" class = "arrow"/>
+             </button>
         </div>
         </ul>
     }
