--- a/src/Chirp.Razor/wwwroot/css/style.css
+++ b/src/Chirp.Razor/wwwroot/css/style.css
@@ -392,29 +392,40 @@ ul.nav li a:hover {
 
 /*USED FOR THE BUTTONS STYLE*/
 #button{
+  height: 55px;
   background:
   linear-gradient(to top, #797777 -30%, hsla(24, 97%, 40%, 0.886));
   border-width:2px;
   border-style:solid;
   border-color:#610101;;
   color: #D4D4D4;
+  padding: 10px;
+  width: 110px;
+  border-radius: 15px;
+  height: 40px;
 }
 
 /*FOR BUTTON LEFT*/
 .left{
-  float: left;
-  width: 110px;
+  display: flex;
+  align-items: center;
 }
 /*FOR BUTTON RIGHT*/
 .right{
-  justify-self: right;
-  width: 110px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-/*FOR BUTTON CENTER*/
-.center{
-  justify-self: center;
-  width: 110px;
+.arrow{
+  width: 40px;
+  height: 30px;
+}
+
+.arrowRight{
+  width: 50px;
+  height: 30px;
+  transform: scaleX(-1);
 }
 
 /*MAKES THE STRUCTURE WITHIN THE CHEEPS INTO COLUMN*/
