--- a/src/Chirp.Razor/Pages/Public.cshtml
+++ b/src/Chirp.Razor/Pages/Public.cshtml
@@ -26,14 +26,22 @@
                 </li>
             }
         </ul>
+        
         <div class = "PageNavigationButton">
-
-            <a href = "/?page=@Model.lastPage">
+        @if(Model.currentPage != 0){
+            <a href = "/?page=@Model.previousPage">
             <button class = "left" id = "button"> 
                 <img src="/images/arrow.png" class = "arrowRight"/>
                     Previous 
             </button>
             </a>
+        }else{
+                <button class = "left" id = "limit"> 
+                 <img src="/images/arrow.png" class = "arrowRight"/>
+                    Previous 
+                </button>
+        }
+
             <div id="pagelist">
                 @for(int i = 0; i <= Model.count / 32; i++)
                     {
