All functions from Public Timeline added to the User Timeline

--- a/src/Chirp.Razor/Pages/Public.cshtml
+++ b/src/Chirp.Razor/Pages/Public.cshtml
@@ -32,13 +32,13 @@
             <a href = "/?page=@Model.previousPage">
             <button class = "left" id = "button"> 
                 <img src="/images/arrow.png" class = "arrowRight"/>
-                    Previous 
+                    Prev
             </button>
             </a>
             }else{
                 <button class = "left" id = "limit"> 
                  <img src="/images/arrow.png" class = "arrowRight"/>
-                    Previous 
+                    Prev
                 </button>
             }
 
