Small design change with pagenavigation numbers

--- a/src/Chirp.Razor/Pages/Public.cshtml
+++ b/src/Chirp.Razor/Pages/Public.cshtml
@@ -47,9 +47,9 @@
                     {
                         @if(i > Model.currentPage + 3 || i < Model.currentPage -3){
                             @if(i == Model.lastPage){
-                                <a href="/?page=@i">- end</a> 
+                               <fill>..</fill> <a href="/?page=@i">@i</a> 
                             } else if(i == 0){
-                                 <a href="/?page=@i">start -</a> 
+                                 <a href="/?page=@i">@i</a> <fill>..</fill>
                             }
                         } else if(Model.currentPage == i){
                              <a href="/?page=@i" id = 'current'>@i</a>
