--- a/src/Chirp.Razor/wwwroot/css/style.css
+++ b/src/Chirp.Razor/wwwroot/css/style.css
@@ -436,6 +436,11 @@ ul.nav li a:hover {
   transform: scaleX(-1);
 }
 
+fill{
+  color: #452a238d;
+  font-size: 10px;
+}
+
 #pagelist{
   display: inline-block;
   font-size: 11.5px;
