added pages to the model package. This is to make it to uphold the structure of the program

--- a/src/Chirp.Razor/Pages/Public.cshtml
+++ b/src/Chirp.Razor/Pages/Public.cshtml
@@ -1,8 +1,9 @@
 ﻿@page "/"
-@model Chirp.Razor.Pages.PublicModel
+@model Chirp.Razor.Model.Pages.PublicModel
+@using Chirp.Razor.Model.Pages
 @{
     ViewData["Title"] = "Chirp!";
-    Layout = "Shared/_Layout";
+    Layout = "./Shared/_Layout.cshtml";;
 }
 
 <div>
