--- a/src/Chirp.Razor/Pages/Public.cshtml
+++ b/src/Chirp.Razor/Pages/Public.cshtml
@@ -26,28 +26,39 @@
                 </li>
             }
         </ul>
-        
-        <div class = "PageNavigationButton">
+
+
+
+        <!-- BOTTOM OF PAGE -->
+
+        <div class = "PageNavigation">
+
+        <!-- Defines the 'prev' button which will function as a way to go to the
+        previous page by clicking on it-->
          @if(Model.currentPage != 0){
             <a href = "/?page=@Model.previousPage">
-            <button class = "left" id = "button"> 
+                <button class = "left" id = "button"> 
+                    <img src="/images/arrow.png" class = "arrowRight"/>
+                    Prev
+                </button>
+            </a>
+         }else{
+            <button class = "left" id = "limit"> 
                 <img src="/images/arrow.png" class = "arrowRight"/>
                     Prev
             </button>
-            </a>
-            }else{
-                <button class = "left" id = "limit"> 
-                 <img src="/images/arrow.png" class = "arrowRight"/>
-                    Prev
-                </button>
-            }
+         }
 
+
+        <!-- Defines the 'pagelist' which will function as a way to navigate
+        simply by using numbers in the bottom of a page-->
             <div id="pagelist">
                 @for(int i = 0; i <= Model.count / 32; i++)
                     {
                         @if(i > Model.currentPage + 3 || i < Model.currentPage -3){
                             @if(i == Model.lastPage){
-                               <fill>..</fill> <a href="/?page=@i">@i</a> 
+                               <fill>..</fill>
+                               <a href="/?page=@i">@i</a>
                             } else if(i == 0){
                                  <a href="/?page=@i">@i</a> <fill>..</fill>
                             }
@@ -58,15 +69,18 @@
                      }
                 }
             </div>
+
+        <!-- Defines the 'next' button which will function as a way to go to the
+        next page by clicking on it-->
             @if(Model.currentPage != Model.lastPage){
-            <a href = "/?page=@Model.nextPage">
-                <button class = "right" id = "button">
-                    Next
-                    <img src="/images/arrow.png" class = "arrow"/>
-                </button>
-            </a>
+                <a href = "/?page=@Model.nextPage">
+                    <button class = "right" id = "button">
+                        Next
+                        <img src="/images/arrow.png" class = "arrow"/>
+                    </button>
+                </a>
             } else{
-                    <button class = "right" id = "limit">
+                <button class = "right" id = "limit">
                     Next
                     <img src="/images/arrow.png" class = "arrow"/>
                 </button>
