--- a/src/Chirp.Razor/Pages/UserTimeline.cshtml
+++ b/src/Chirp.Razor/Pages/UserTimeline.cshtml
@@ -27,24 +27,15 @@
                 </li>
             }
          </ul>
-       /* <div class = "PageNavigationButton">
-        <button class = "left" id = "button"> -- Last page </button>
-        <button class = "center" id = "button"> Top </button>
-        <button class = "right" id = "button"> Next page --> </button>
-        </div>
-        <ul id="pagelist">
-            @for(int i = 0; i <= Model.count / 32; i++)
-            {
-                <li>
-                    <p>
-                        <strong>
-                            <a href="/@routeName/?page=@i">@i</a>
-                        </strong>
-                    </p>
-                </li>
-            }
-        </ul>*/
-        <div class = "PageNavigationButton">
+
+
+
+        <!-- BOTTOM OF PAGE -->
+
+
+        <!-- Defines the 'prev' button which will function as a way to go to the
+        previous page by clicking on it-->
+        <div class = "PageNavigation">
          @if(Model.currentPage != 0){
             <a href = "/@routeName/?page=@Model.previousPage">
                 <button class = "left" id = "button"> 
@@ -59,6 +50,8 @@
                 </button>
             }
 
+        <!-- Defines the 'pagelist' which will function as a way to navigate
+        simply by using numbers in the bottom of a page-->
             <div id="pagelist">
                 @for(int i = 0; i <= Model.count / 32; i++)
                     {
@@ -75,6 +68,9 @@
                      }
                 }
             </div>
+
+        <!-- Defines the 'next' button which will function as a way to go to the
+        next page by clicking on it-->
             @if(Model.currentPage != Model.lastPage){
             <a href = "/@routeName/?page=@Model.nextPage">
                 <button class = "right" id = "button">
