--- a/src/Chirp.Web/Pages/Public.cshtml
+++ b/src/Chirp.Web/Pages/Public.cshtml
@@ -1,6 +1,5 @@
 ﻿@page "/"
-@model Chirp.Razor.Model.Pages.PublicModel
-@using Chirp.Razor.Model.Pages
+@model Chirp.Web.PublicModel
 @{
     ViewData["Title"] = "Chirp!";
     Layout = "./Shared/_Layout.cshtml";;
