public timeline using ef core

--- a/src/Chirp.Razor/Pages/Public.cshtml
+++ b/src/Chirp.Razor/Pages/Public.cshtml
@@ -17,12 +17,12 @@
                 <li>
                     <div class="cheep-content">
                         <strong class="author">
-                            <a href="/@cheep.Author">@cheep.Author</a>
+                            <a href="/@cheep.author">@cheep.author</a>
                         </strong>
                         <p class="message">
-                            @cheep.Message
+                            @cheep.text
                         </p>
-                        <span class="date">&mdash; @cheep.Timestamp</span>
+                        <span class="date">&mdash; @cheep.timestamp</span>
                     </div>
                 </li>
             }
