--- a/src/Chirp.Web/Pages/UserTimeline.cshtml
+++ b/src/Chirp.Web/Pages/UserTimeline.cshtml
@@ -17,12 +17,12 @@
                 <li>
                    <div class="cheep-content">
                         <strong class="author">
-                            <a href="/@cheep.Author">@cheep.Author</a>
+                            <a href="/@cheep.author">@cheep.author</a>
                         </strong>
                         <p class="message">
-                            @cheep.Message
+                            @cheep.text
                         </p>
-                        <span class="date">&mdash; @cheep.Timestamp</span>
+                        <span class="date">&mdash; @ToDateTime(cheep.timestamp)</span>
                     </div>
                 </li>
             }
@@ -93,3 +93,9 @@
 
     
 </div>
+
+ @functions{
+        public DateTime ToDateTime(long value){
+            return Chirp.Repositories.HelperFunctions.FromUnixTimeToDateTime(value);
+    }
+    }
