Made the header sticky (to the top) so it follows where the user scrolls

--- a/src/Chirp.Web/Pages/Shared/_Layout.cshtml
+++ b/src/Chirp.Web/Pages/Shared/_Layout.cshtml
@@ -6,10 +6,10 @@
     <link rel="icon" type="image/png" href="/favicon/favicon.ico">
 </head>
 <body>
-    <box onclick = "window.location = '/?page=0'" class = "bird">
-        <img src="/images/icon1.png" class = "Icon" alt="Icon1"/>
-    </box>
     <h1 class = "header">
+        <box onclick = "window.location = '/?page=0'">
+            <img src="/images/icon1.png" class = "Icon" alt="Icon1"/>
+        </box>
         Chirp
     </h1>
     <div class=page>
