--- a/src/Chirp.Web/Pages/Shared/_Layout.cshtml
+++ b/src/Chirp.Web/Pages/Shared/_Layout.cshtml
@@ -28,6 +28,10 @@
 
         <div class = "login"> Log in</div>
     </h1>
+
+    <div class = "navbar">
+        
+    </div>
     <div class=page>
         <div class=body>
             @RenderBody()
