--- a/src/Chirp.Web/Pages/Shared/_Layout.cshtml
+++ b/src/Chirp.Web/Pages/Shared/_Layout.cshtml
@@ -6,12 +6,16 @@
     <link rel="icon" type="image/png" href="/favicon/favicon.ico">
 </head>
 <body>
-    <h1 class = "header">
+     <h1 class = "header">
         <box onclick = "window.location = '/?page=0'">
             <img src="/images/icon1.png" class = "Icon" alt="Icon1"/>
         </box>
         Chirp
     </h1>
+
+    <div class = "navbar">
+        
+    </div>
     <div class=page>
         <div class=body>
             @RenderBody()
